* install_choctop: --tmbundle/--textmate flag
* Don't mention CocoaApp in usage; choctop can do more now

== 0.13.1 2010-07-07

* Can add URL .webloc files into DMG via #add_link/#link helper

== 0.13.0 2010-07-06

* Can now package up entire project (such as a TextMate bundle) as an item (#root or #add_root helper)
* SEE README: Using Bundler to define gem dependencies

== 0.12.1 2010-06-07
* No longer depend on active support

== 0.12.0 2010-05-29
* Tests run again
* Reorganzied code base so that there is a module ChocTop and a class Configuration
* New version helper
  rake version:current
  rake version:bump:major
  rake version:bump:minor
  rake version:bump:patch
* Pulled in changes from all forks

== 0.11.1
* ChocTop no longer solely for Cocoa applications
* Applications shortcut only included if the primary target is a .app bundle
* Creates a non-versioned symlink to latest released DMG
* Files to be included can be specified by relative path, method helper (as a symbol) or a proc that returns a string path. 
  Examples:
    file 'build/Release/SampleApp.app', :position => [50, 100]
    file :target_bundle, :position => [50, 100]
    file proc { 'README.txt' }, :position => [50, 100]
    file :position => [50, 100] { 'README.txt' }


== 0.10.0 2009-06-11

* Extra files supported: +add_file 'project/path/to/file_or_folder_or_bundle', :position => [x, y]+

== 0.9.7 2009-05-17

* New config option: s.build_type = ENV['BUILD_TYPE'] || 'Release' [kdbdallas]
* permit SUFeedURL to not be specified (cleanly exit from deploy rake tasks)
* removed unused 'appcast' rake task

== 0.9.6 2009-02-10

* Custom Applications Icons!!!
* New config option: s.application_icon = "xxx.png"
* New config option: s.icon_text_size = 12
* rake dmg NO_BUILD=1 will skip the build step
* The background image no longer appears in the "real time" design of the DMG as its in .background folder

== 0.9.5 2009-02-03

* Fixed whitespace in project names bug

== 0.9.4 2009-01-31
