@@ -1,2 +1,3 @@
 You use choctop with the following rake tasks:
   rake dmg     # Create the dmg file for appcasting
+  rake upload  # Upload the dmg file to the host
