@@ -6,9 +6,10 @@ require "choctop"
 ChocTop::Configuration.new do |s|
   s.name = '<%= name %>'
 
-  s.add_root :position => [180, 65], :exclude => %w[build .bundle .git]
-  # s.add_link 'http://github.com/<%= github_user %>/<%= name %>', 'GitHub', :position => [520, 200]
+  s.add_root :position => [90, 70], :exclude => %w[build .bundle .git]
+  # s.add_link 'http://github.com/<%= github_user %>/<%= name %>', 'GitHub', :position => [220, 70]
 
+  s.defaults :textmate
   # s.background_file = 'Support/dmg/dmg_background.png'
   # s.volume_icon     = 'Support/dmg/dmg_volume_icon.icns'
 end
